manifests/homelab/immich/Deployment-immich-postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgresql
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-postgresql
  template:
    metadata:
      labels:
        app: immich-postgresql
    spec:
      containers:
        - args:
            - postgres
            - -c
            - shared_preload_libraries=vchord.so
          image: docker.io/tensorchord/vchord-postgres:pg16-v1.1.1@sha256:d12a579a95c5ea7bb0294181eddf091ab790eebd37f40c49b6de221e2fb756ed
          name: postgresql
          ports:
            - containerPort: 5432
              name: postgresql
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: data
              subPath: pgdata
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: immich-postgresql-data
