manifests/homelab/immich/Deployment-immich-public-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-public-proxy
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-public-proxy
  template:
    metadata:
      labels:
        app: immich-public-proxy
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: IMMICH_URL
              value: http://immich-server:2283
          image: ghcr.io/alangrainger/immich-public-proxy:3.4.1@sha256:d29ffe35c81f784685b6e06bc8b7d62bfb654f6e6e7ef8db95bb8aa3d7122694
          name: proxy
          ports:
            - containerPort: 3000
              name: http
          resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
