manifests/homelab/immich/Service-immich-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-postgresql
  namespace: immich
spec:
  ports:
    - name: postgresql
      port: 5432
      targetPort: 5432
  selector:
    app: immich-postgresql
