manifests/homelab/immich/Service-immich-public-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-public-proxy
  namespace: immich
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: immich-public-proxy
