manifests/homelab/immich/Service-immich-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: server
    app.kubernetes.io/service: immich-server
    app.kubernetes.io/version: v2.6.3
    helm.sh/chart: immich-0.12.0
  name: immich-server
  namespace: immich
spec:
  ports:
    - appProtocol: kubernetes.io/ws
      name: http
      port: 2283
      protocol: TCP
      targetPort: http
    - name: metrics-api
      port: 8081
      protocol: TCP
      targetPort: 8081
    - name: metrics-ms
      port: 8082
      protocol: TCP
      targetPort: 8082
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
  type: ClusterIP
