manifests/homelab/immich/Service-immich-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/hostname: immich
    tailscale.com/proxy-group: ingress
  name: immich-tailscale
  namespace: immich
spec:
  loadBalancerClass: tailscale
  ports:
    - name: http
      port: 80
      targetPort: 2283
  selector:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
  type: LoadBalancer
