manifests/homelab/immich/Ingress-immich-funnel.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    tailscale.com/funnel: "true"
  name: immich-funnel
  namespace: immich
spec:
  defaultBackend:
    service:
      name: immich-server
      port:
        number: 2283
  ingressClassName: tailscale
  tls:
    - hosts:
        - immich-share
